# kukicha

./: .gitignore  AGENTS.md  DEVELOPMENT.md  LICENSE  README.md  package.json  pyproject.toml
.githooks/: pre-commit
.github/workflows/: tests.yml
docs/: music_recommender_validation.md
src/kukicha/: __init__.py  _compat.py  album_artists.py  app_metadata.py  audio_types.py  cli.py  discogs.py  display.py  file_metadata.py  library_sources.py  media_resources.py  models.py  opensubsonic_web_adapter.py  player_actions.py  player_auth.py  player_common.py  player_config.py  player_errors.py  player_jobs.py  player_media.py  player_navigation.py  player_platform.py  player_playlists.py  player_presenters.py  player_runtime.py  player_views.py  player_web_adapter.py  playlist_art.py  scanner.py  search.py  static_assets.py  taxonomy_data.py  text.py
src/kukicha/commands/: __init__.py  init.py  opensubsonic.py  player.py  tools.py  youtube_audio.py
src/kukicha/data/: taxonomy.tsv
src/kukicha/static/: player.css  player.js
src/kukicha/use_case/: __init__.py  cache.py  coverartarchive.py  database.py  discogs.py  itunes.py  library.py  listening.py  metadata.py  musicbrainz.py  recommendations.py
tests/: test_album_artists.py  test_library.py  test_musicbrainz.py  test_opensubsonic.py  test_player.py  test_playlist_art.py  test_recommendations.py  test_scanner.py  test_search.py  test_tools.py
tests/js/: player.test.js
tools/: __init__.py  specs_to_pdf.py
tools/taxonomy/: __init__.py  __main__.py  build.py  discogs.py
tools/taxonomy/data/: mb_genres_review_v0.tsv  mb_genres_v0.txt
(+48 files in other folders)
