[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kukicha"
version = "0.1.0a1"
description = "Scan and query a SQLite-backed music metadata database."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "argon2-cffi>=25.1,<25.2",
  "botocore>=1.43,<1.44",
  "Flask>=3.1,<3.2",
  "Jinja2>=3.1,<3.2",
  "mutagen>=1.47,<1.48",
  "Pillow>=12.2,<12.3",
  "tomli>=2.0.1,<3; python_version < '3.11'",
  "yt-dlp[default]>=2026.3,<2026.4",
]

[dependency-groups]
release = [
  "twine>=6.2,<6.3",
]

[project.scripts]
kukicha = "kukicha.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kukicha = ["data/*.tsv", "templates/player/*.html", "static/*.css", "static/*.js", "static/*.svg"]
